vm/snapshots/hello_world-PrintHelloWorldOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
Hello World!
----- STDERR -----
