vm/snapshots/hello_world-basic-HelloWorldOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Hello World!
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Hello World!
----- STDERR -----
