vm/snapshots/mirrors-custom_interface_getclass-CustomInterfaceGetClassOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
mirrors.custom_interface_getclass.CustomInterfaceGetClassOkMain$MyImpl
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
mirrors.custom_interface_getclass.CustomInterfaceGetClassOkMain$MyImpl
----- STDERR -----
