vm/snapshots/mirrors-interface_getclass-InterfaceGetClassOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
java.util.ImmutableCollections$MapN
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
java.util.ImmutableCollections$MapN
----- STDERR -----
