vm/snapshots/mirrors-object_getclass-ObjectGetClassOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
mirrors.object_getclass.ObjectGetClassOkMain$MyClass
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
mirrors.object_getclass.ObjectGetClassOkMain$MyClass
----- STDERR -----
