vm/snapshots/natives-java-lang-system_arraycopy_ok-SystemArrayCopyOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----

----- STDERR -----
