vm/snapshots/natives-java-lang-system_arraycopy_should_throw_with_non_arr_src_err-SystemArrayCopyShouldThrowWithNonArrSrcErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.ArrayStoreException: arraycopy: source type java.lang.Object is not an array
	at java.lang.System.arraycopy(Native Method)
	at natives.java.lang.system_arraycopy_should_throw_with_non_arr_src_err.SystemArrayCopyShouldThrowWithNonArrSrcErrMain.main(SystemArrayCopyShouldThrowWithNonArrSrcErrMain.java:8)
