vm/snapshots/natives-java-lang-system_arraycopy_should_throw_with_non_dest_src_err-SystemArrayCopyShouldThrowWithNonArrDestErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArrayStoreException: arraycopy: destination type java.lang.Object is not an array
	at java.lang.System.arraycopy(Native Method)
	at natives.java.lang.system_arraycopy_should_throw_with_non_dest_src_err.SystemArrayCopyShouldThrowWithNonArrDestErrMain.main(SystemArrayCopyShouldThrowWithNonArrDestErrMain.java:8)
